--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage[normalem]{ulem}
 
 \usepackage{docmute,import}
+\usepackage{subfiles}
 
 \newcommand{\imag}{{\mathrm i\,}}
 
@@ -29,14 +30,14 @@
 \newtheorem{example}{例}[section]
 \renewcommand{\proofname}{\bf{証明}}
 
-\title{タイトル}
+\title{振動子ネットワークにおける\\クラスター構造とダイナミクス}
 %\titlewidth{}% タイトル幅 (指定するときは単位つきで)
-\author{著者名}
-\eauthor{著者名の英語つづり}% Copyright 表示で使われる
-\studentid{学生証番号}
-\supervisor{指導教員名 役職}% 1 つ引数をとる (役職まで含めて書く)
+\author{加藤雅己}
+\eauthor{Masaki Kato}% Copyright 表示で使われる
+\studentid{03-200613}
+\supervisor{郡宏 教授}% 1 つ引数をとる (役職まで含めて書く)
 %\supervisor{指導教員名 役職 \and 指導教員名 役職}% 複数教員の場合，\and でつなげる
-\handin{2016}{1}% 提出月. 2 つ (年, 月) 引数をとる
+\handin{2021}{2}% 提出月. 2 つ (年, 月) 引数をとる
 %\keywords{キーワード1, キーワード2} % 概要の下に表示される
 
 \begin{document}
@@ -65,17 +66,19 @@
 \clearpage}
 
 \mainmatter% ここから本文 %%% 本文 %%%%%%%%
-\chapter{}
-
+\subfile{chapters/intro.tex}
+\subfile{chapters/method-percolation.tex}
+\subfile{chapters/method-3body.tex}
+\subfile{chapters/summary.tex}
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 
-\begin{thebibliography}{}%%%% 参考文献 %%%
- \bibitem{}
-\end{thebibliography}
-%\bibliographystyle{}%           BibTeX を使う場合
-%\bibliography{.bib ファイル名}% BibTeX を使う場合
+% \begin{thebibliography}{}%%%% 参考文献 %%%
+%  \bibitem{}
+% \end{thebibliography}
+\bibliographystyle{junsrt}%           BibTeX を使う場合
+\bibliography{reference.bib}% BibTeX を使う場合
 
 \appendix% ここから付録 %%%%% 付録 %%%%%%%
-\chapter{}
+\subfile{chapters/appendix.tex}
 \end{document}
