--- a/reference.bib
+++ b/reference.bib
@@ -8,4 +8,17 @@ note = {The Kuramoto model in complex networks},
 issn = {0370-1573},
 doi = {https://doi.org/10.1016/j.physrep.2015.10.008},
 author = {Francisco A. Rodrigues and Thomas K. DM. Peron and Peng Ji and Jurgen Kurths},
+},
+@article{XiaHuang:130506,
+author = {Xia Huang, Jin Dong, Wen-Jing Jia, Zhi-Gang Zheng, Can Xu},
+title = {Dynamics of clustering patterns in the Kuramoto model with unidirectional coupling},
+publisher = {Front. Phys. },
+year = {2018},
+journal = {Frontiers of Physics},
+volume = {13},
+number = {5},
+eid = {130506},
+numpages = {0},
+pages = {130506},
+doi = {10.1007/s11467-018-0783-1}
 }
