dynamical system in prev are editted

--- a/reference.bib
+++ b/reference.bib
@@ -21,4 +21,34 @@ eid = {130506},
 numpages = {0},
 pages = {130506},
 doi = {10.1007/s11467-018-0783-1}
+},@article{Schwartz1963ErrataAG,
+  title={Errata: A Generalization of a Poincare-Bendixson Theorem to Closed Two-Dimensional Manifolds},
+  author={Arthur J. Schwartz},
+  journal={American Journal of Mathematics},
+  year={1963},
+  volume={85},
+  pages={453}
+  doi = {10.2307/2373120}
+},
+@book{teschlordinary,
+  title={Ordinary Differential Equations and Dynamical Systems},
+  author={Teschl, G.},
+  isbn={9780821891056},
+  series={Graduate studies in mathematics},
+  publisher={American Mathematical Soc.}
+},
+@article{Ciesielski+2012+2110+2128,
+author = {Krzysztof Ciesielski},
+doi = {10.2478/s11533-012-0110-y},
+title = {The Poincare-Bendixson Theorem: from Poincare to the XXIst century},
+journal = {Open Mathematics},
+number = {6},
+volume = {10},
+year = {2012},
+pages = {2110--2128}
+},@book{Broer1996,
+title = {Quasi-periodic motions in families of dynamical systems},
+author = {HW Broer and GB Huitema and MB Sevryuk},
+year = {1996},
+publisher = {Springer},
 }
