kuramoto and INT are updated

--- a/reference.bib
+++ b/reference.bib
@@ -21,7 +21,8 @@ eid = {130506},
 numpages = {0},
 pages = {130506},
 doi = {10.1007/s11467-018-0783-1}
-},@article{Schwartz1963ErrataAG,
+},
+@article{Schwartz1963ErrataAG,
   title={Errata: A Generalization of a Poincare-Bendixson Theorem to Closed Two-Dimensional Manifolds},
   author={Arthur J. Schwartz},
   journal={American Journal of Mathematics},
@@ -46,9 +47,36 @@ number = {6},
 volume = {10},
 year = {2012},
 pages = {2110--2128}
-},@book{Broer1996,
+},
+@book{Broer1996,
 title = {Quasi-periodic motions in families of dynamical systems},
 author = {HW Broer and GB Huitema and MB Sevryuk},
 year = {1996},
 publisher = {Springer},
+},
+@article{kuramoto1975,
+author={Y. Kuramoto},
+title={Self-entrainment of a population of coupled nonlinear oscillators},
+journal={In International Symposium on Mathematical Problems in Theoretical Physics (Lecture Notes in Physics, vol.39)},
+publisher={Springer},
+year={1975},
+pages={420-422},
+DOI={10.1007/BFb0013365},
+},
+@book{biorhythm,
+  title={生物リズムと力学系},
+  author={郡宏, 森田善久},
+  year={2010},
+  isbn={978-4-320-11000-7},
+  series={シリーズ・現象を解明する数学},
+  publisher={共立出版}
+},
+@book{james2003,
+author = {Murdock, James},
+year = {2003},
+month = {01},
+title = {Normal Forms and Unfoldings for Local Dynamical Systems},
+isbn = {978-1-4419-3013-2},
+publisher = {Springer},
+doi = {10.1007/b97515}
 }
