outline was completed

--- a/reference.bib
+++ b/reference.bib
@@ -60,7 +60,7 @@ title={Self-entrainment of a population of coupled nonlinear oscillators},
 journal={In International Symposium on Mathematical Problems in Theoretical Physics (Lecture Notes in Physics, vol.39)},
 publisher={Springer},
 year={1975},
-pages={420-422},
+pages={420--422},
 DOI={10.1007/BFb0013365},
 },
 @book{biorhythm,
@@ -79,4 +79,20 @@ title = {Normal Forms and Unfoldings for Local Dynamical Systems},
 isbn = {978-1-4419-3013-2},
 publisher = {Springer},
 doi = {10.1007/b97515}
+},
+@article{Bollobas2013,
+  author          = {Bollobas, Bela and Riordan, Oliver},
+  journal         = {Bolyai Society Mathematical Studies},
+  title           = {The Phase Transition in the Erdős–Rényi Random Graph Process},
+  volume          = {25},
+  year            = {2013}
+},
+@article{Albert2002,
+  author          = {Albert,R\'eka and Barab\'asi, Albert-L\'aszl\'o},
+  journal         = {Rev. Mod. Phys.},
+  number          = {},
+  pages           = {47--97},
+  title           = {Statistical mechanics of complex networks},
+  volume          = {74},
+  year            = {2002}
 }
