outline is almost completed

--- a/reference.bib
+++ b/reference.bib
@@ -4,7 +4,6 @@ journal = {Physics Reports},
 volume = {610},
 pages = {1-98},
 year = {2016},
-note = {The Kuramoto model in complex networks},
 issn = {0370-1573},
 doi = {https://doi.org/10.1016/j.physrep.2015.10.008},
 author = {Francisco A. Rodrigues and Thomas K. DM. Peron and Peng Ji and Jurgen Kurths},
@@ -17,8 +16,6 @@ year = {2018},
 journal = {Frontiers of Physics},
 volume = {13},
 number = {5},
-eid = {130506},
-numpages = {0},
 pages = {130506},
 doi = {10.1007/s11467-018-0783-1}
 },
@@ -33,7 +30,7 @@ doi = {10.1007/s11467-018-0783-1}
 },
 @book{teschlordinary,
   title={Ordinary Differential Equations and Dynamical Systems},
-  author={Teschl, G.},
+  author={Teschl, Gerald},
   isbn={9780821891056},
   series={Graduate studies in mathematics},
   publisher={American Mathematical Soc.}
@@ -50,12 +47,12 @@ pages = {2110--2128}
 },
 @book{Broer1996,
 title = {Quasi-periodic motions in families of dynamical systems},
-author = {HW Broer and GB Huitema and MB Sevryuk},
+author = {Hendrik W. Broer and George B. Huitema and Mikhail B. Sevryuk},
 year = {1996},
 publisher = {Springer},
 },
 @article{kuramoto1975,
-author={Y. Kuramoto},
+author={Kuramoto, Yoshiyuki},
 title={Self-entrainment of a population of coupled nonlinear oscillators},
 journal={In International Symposium on Mathematical Problems in Theoretical Physics (Lecture Notes in Physics, vol.39)},
 publisher={Springer},
@@ -65,7 +62,7 @@ DOI={10.1007/BFb0013365},
 },
 @book{biorhythm,
   title={生物リズムと力学系},
-  author={郡宏, 森田善久},
+  author={郡宏 and 森田善久},
   year={2010},
   isbn={978-4-320-11000-7},
   series={シリーズ・現象を解明する数学},
@@ -95,4 +92,24 @@ doi = {10.1007/b97515}
   title           = {Statistical mechanics of complex networks},
   volume          = {74},
   year            = {2002}
+},
+@article{PhysRevLett.110.158101,
+  title = {Reentry Near the Percolation Threshold in a Heterogeneous Discrete Model for Cardiac Tissue},
+  author = {Alonso, Sergio and B\"ar, Markus},
+  journal = {Phys. Rev. Lett.},
+  volume = {110},
+  issue = {15},
+  pages = {158101},
+  numpages = {5},
+  year = {2013},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.110.158101},
+},
+@article{Pasquale2008SelforganizationAN,
+  title={Self-organization and neuronal avalanches in networks of dissociated cortical neurons},
+  author={Valentina Pasquale and Paolo Massobrio and Luca Leonardo Bologna and Michela Chiappalone and Sergio Martinoia},
+  journal={Neuroscience},
+  year={2008},
+  volume={153},
+  pages={1354--1369}
 }
