--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,12 @@
 
 \usepackage[dvipdfmx]{graphicx,color}
 \usepackage{url}
-\usepackage{amsmath,amssymb,amsthm,braket,listings,physics,here,subfigure,longtable,color,comment,blkarray,ascmac}
+\usepackage{amsmath,amssymb,amsthm,braket,listings,physics,here,longtable,color,comment,blkarray,ascmac}
 \usepackage{mathtools}
 \usepackage[normalem]{ulem}
+\usepackage[subrefformat=parens]{subcaption}
+\usepackage[font=small]{caption}
+\captionsetup{compatibility=false}
 
 \usepackage{docmute,import}
 \usepackage{subfiles}
@@ -40,7 +43,7 @@
 \supervisor{郡宏 教授}% 1 つ引数をとる (役職まで含めて書く)
 %\supervisor{指導教員名 役職 \and 指導教員名 役職}% 複数教員の場合，\and でつなげる
 \handin{2021}{2}% 提出月. 2 つ (年, 月) 引数をとる
-%\keywords{キーワード1, キーワード2} % 概要の下に表示される
+\keywords{蔵元位相振動子モデル,\ 複雑ネットワーク,\ percolation} % 概要の下に表示される
 
 \begin{document}
 \maketitle%%%%%%%%%%%%%%%%%%% タイトル %%%%
@@ -54,7 +57,16 @@
 %\end{eabstract}
 
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
- ここに概要を書く．
+  同期現象はホタルの明滅や神経細胞，心筋細胞など自然界で広く見られ，また，電力網などの工学系でも見られる．
+  また，同期現象の数理モデルの進歩と同時にネットワーク科学が発展し，接続次数などのネットワークの構造と同期，拡散などの動的なプロセスとの関係が盛んに調べられている．  
+  興奮系などの位相振動子として解釈可能な系からなるネットワークにおいて，percolation のような構造的な性質がネットワーク自体の機能に関係することが分かっている一方，
+  percolation と同期現象とを同時に取り扱う研究は十分になされていない．
+  同期現象を理解する場合それぞれの振動子の振動数が主要な役割を果たすため，興奮現象などの同期現象を理解する上ではネットワークの構造の一方だけを考慮することは十分とは言えない．
+  そのため，ネットワークにおける振動数分布がその構造とどのように関係するか調べることが望まれる．
+  本論文では，振動子ネットワークにおけるネットワーク構造と同期状態やクラスタ状態の関係を調べる．
+  特に，枝の生成・消滅に伴う同期状態の変化という細かい性質及び，
+  枝の本数と平均的な振動数によるクラスタ状態の関係という一般的な性質について調べる．
+  さらには，それらの状態間の分岐条件を求め，同期や percolation との関係を調べる．
 \end{abstract}
 
 
@@ -68,14 +80,16 @@
 \clearpage}
 
 \mainmatter% ここから本文 %%% 本文 %%%%%%%%
-% \subfile{chapters/notation.tex}
-% \subfile{chapters/intro.tex}
+\subfile{chapters/notation.tex}
+\subfile{chapters/intro.tex}
 \subfile{chapters/prev.tex}
 \subfile{chapters/method-3body.tex}
-% \subfile{chapters/method-percolation.tex}
-% \subfile{chapters/summary.tex}
+\subfile{chapters/method-percolation.tex}
+\subfile{chapters/summary.tex}
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
+指導教員である郡宏教授には，研究のテーマ設定から論文の執筆まで大変熱心に御指導頂きました．
+ありがとうございます．
 
 % \begin{thebibliography}{}%%%% 参考文献 %%%
 %  \bibitem{}
