--- a/reference.bib
+++ b/reference.bib
@@ -112,4 +112,38 @@ doi = {10.1007/b97515}
   year={2008},
   volume={153},
   pages={1354--1369}
+},
+@article{CUMIN2007181,
+title = {Generalising the Kuramoto model for the study of neuronal synchronisation in the brain},
+journal = {Physica D: Nonlinear Phenomena},
+volume = {226},
+number = {2},
+pages = {181-196},
+year = {2007},
+issn = {0167-2789},
+doi = {https://doi.org/10.1016/j.physd.2006.12.004},
+author = {D. Cumin and C.P. Unsworth},
+},
+@article{RevModPhys.77.137,
+  title = {The Kuramoto model: A simple paradigm for synchronization phenomena},
+  author = {Acebr\'on, Juan A. and Bonilla, L. L. and P\'erez Vicente, Conrad J. and Ritort, F\'elix and Spigler, Renato},
+  journal = {Rev. Mod. Phys.},
+  volume = {77},
+  issue = {1},
+  pages = {137--185},
+  numpages = {0},
+  year = {2005},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.77.137},
+},
+@ARTICLE{1992BonillaNeuSpigler,
+       author = {{Bonilla}, Luis L. and {Neu}, John C. and {Spigler}, Renato},
+        title = {Nonlinear stability of incoherence and collective synchronization in a population of coupled oscillators},
+      journal = {Journal of Statistical Physics},
+     keywords = {Nonlinear oscillators, synchronization, mean-field model, bimodal distribution, bifurcation, nonlinear stability},
+         year = {1992},
+       volume = {67},
+       number = {1-2},
+        pages = {313-330},
+          doi = {10.1007/BF01049037},
 }
