--- a/reference.bib
+++ b/reference.bib
@@ -146,4 +146,94 @@ author = {D. Cumin and C.P. Unsworth},
        number = {1-2},
         pages = {313-330},
           doi = {10.1007/BF01049037},
+},
+@article{Strogatz1993,
+   author = {Steven H. Strogatz and Ian Stewart},
+   doi = {10.1038/scientificamerican1293-102},
+   issn = {0036-8733},
+   issue = {6},
+   journal = {Scientific American},
+   month = {12},
+   pages = {102-109},
+   title = {Coupled Oscillators and Biological Synchronization},
+   volume = {269},
+   year = {1993},
+},
+@article{Dorfler2012,
+   author = {Florian Dörfler and Francesco Bullo},
+   doi = {10.1137/110851584},
+   issn = {0363-0129},
+   issue = {3},
+   journal = {SIAM Journal on Control and Optimization},
+   month = {1},
+   pages = {1616-1642},
+   title = {Synchronization and Transient Stability in Power Networks and Nonuniform Kuramoto Oscillators},
+   volume = {50},
+   year = {2012},
+},
+@article{Winfree1967,
+   author = {Arthur T. Winfree},
+   doi = {10.1016/0022-5193(67)90051-3},
+   issn = {00225193},
+   issue = {1},
+   journal = {Journal of Theoretical Biology},
+   month = {7},
+   pages = {15-42},
+   title = {Biological rhythms and the behavior of populations of coupled oscillators},
+   volume = {16},
+   year = {1967},
+},
+@article{Moreno_2004,
+	doi = {10.1209/epl/i2004-10238-x},
+	year = {2004},
+	month = {nov},
+	publisher = {{IOP} Publishing},
+	volume = {68},
+	number = {4},
+	pages = {603--609},
+	author = {Y Moreno and A. F Pacheco},
+	title = {Synchronization of Kuramoto oscillators in scale-free networks},
+	journal = {Europhysics Letters ({EPL})},
+},
+@article{PhysRevLett.106.128701,
+  title = {Explosive Synchronization Transitions in Scale-Free Networks},
+  author = {G\'omez-Garde\~nes, Jes\'us and G\'omez, Sergio and Arenas, Alex and Moreno, Yamir},
+  journal = {Phys. Rev. Lett.},
+  volume = {106},
+  issue = {12},
+  pages = {128701},
+  numpages = {4},
+  year = {2011},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.106.128701},
+},
+@article{Liu2013,
+   author = {Weiqing Liu and Ye Wu and Jinghua Xiao and Meng Zhan},
+   doi = {10.1209/0295-5075/101/38002},
+   issn = {0295-5075},
+   issue = {3},
+   journal = {EPL (Europhysics Letters)},
+   month = {2},
+   pages = {38002},
+   title = {Effects of frequency-degree correlation on synchronization transition in scale-free networks},
+   volume = {101},
+   year = {2013},
+},
+@article{PhysRevLett.124.218301,
+  title = {Explosive Higher-Order Kuramoto Dynamics on Simplicial Complexes},
+  author = {Mill\'an, Ana P. and Torres, Joaqu\'{\i}n J. and Bianconi, Ginestra},
+  journal = {Phys. Rev. Lett.},
+  volume = {124},
+  issue = {21},
+  pages = {218301},
+  numpages = {6},
+  year = {2020},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.124.218301},
 }
+
+
+
+
