true right second edition

--- a/reference.bib
+++ b/reference.bib
@@ -80,7 +80,7 @@ doi = {10.1007/b97515}
 @article{Bollobas2013,
   author          = {Bollobas, Bela and Riordan, Oliver},
   journal         = {Bolyai Society Mathematical Studies},
-  title           = {The Phase Transition in the Erdős–Rényi Random Graph Process},
+  title           = {The Phase Transition in the Erd\"os–R\'enyi Random Graph Process},
   volume          = {25},
   year            = {2013}
 },
@@ -160,7 +160,7 @@ author = {D. Cumin and C.P. Unsworth},
    year = {1993},
 },
 @article{Dorfler2012,
-   author = {Florian Dörfler and Francesco Bullo},
+   author = {Florian D\"orfler and Francesco Bullo},
    doi = {10.1137/110851584},
    issn = {0363-0129},
    issue = {3},
