--- a/reference.bib
+++ b/reference.bib
@@ -33,7 +33,7 @@ doi = {10.1007/s11467-018-0783-1}
   author={Teschl, Gerald},
   isbn={9780821891056},
   series={Graduate studies in mathematics},
-  publisher={American Mathematical Soc.}
+  publisher={American Mathematical Society}
 },
 @article{Ciesielski+2012+2110+2128,
 author = {Krzysztof Ciesielski},
@@ -71,7 +71,6 @@ DOI={10.1007/BFb0013365},
 @book{james2003,
 author = {Murdock, James},
 year = {2003},
-month = {01},
 title = {Normal Forms and Unfoldings for Local Dynamical Systems},
 isbn = {978-1-4419-3013-2},
 publisher = {Springer},
@@ -86,7 +85,7 @@ doi = {10.1007/b97515}
 },
 @article{Albert2002,
   author          = {Albert,R\'eka and Barab\'asi, Albert-L\'aszl\'o},
-  journal         = {Rev. Mod. Phys.},
+  journal         = {Reviews of Modern Physics},
   number          = {},
   pages           = {47--97},
   title           = {Statistical mechanics of complex networks},
@@ -96,7 +95,7 @@ doi = {10.1007/b97515}
 @article{PhysRevLett.110.158101,
   title = {Reentry Near the Percolation Threshold in a Heterogeneous Discrete Model for Cardiac Tissue},
   author = {Alonso, Sergio and B\"ar, Markus},
-  journal = {Phys. Rev. Lett.},
+  journal = {Physical Review Letters},
   volume = {110},
   issue = {15},
   pages = {158101},
@@ -127,7 +126,7 @@ author = {D. Cumin and C.P. Unsworth},
 @article{RevModPhys.77.137,
   title = {The Kuramoto model: A simple paradigm for synchronization phenomena},
   author = {Acebr\'on, Juan A. and Bonilla, L. L. and P\'erez Vicente, Conrad J. and Ritort, F\'elix and Spigler, Renato},
-  journal = {Rev. Mod. Phys.},
+  journal = {Reviews of Modern Physics},
   volume = {77},
   issue = {1},
   pages = {137--185},
@@ -153,7 +152,6 @@ author = {D. Cumin and C.P. Unsworth},
    issn = {0036-8733},
    issue = {6},
    journal = {Scientific American},
-   month = {12},
    pages = {102-109},
    title = {Coupled Oscillators and Biological Synchronization},
    volume = {269},
@@ -165,7 +163,6 @@ author = {D. Cumin and C.P. Unsworth},
    issn = {0363-0129},
    issue = {3},
    journal = {SIAM Journal on Control and Optimization},
-   month = {1},
    pages = {1616-1642},
    title = {Synchronization and Transient Stability in Power Networks and Nonuniform Kuramoto Oscillators},
    volume = {50},
@@ -177,7 +174,6 @@ author = {D. Cumin and C.P. Unsworth},
    issn = {00225193},
    issue = {1},
    journal = {Journal of Theoretical Biology},
-   month = {7},
    pages = {15-42},
    title = {Biological rhythms and the behavior of populations of coupled oscillators},
    volume = {16},
@@ -186,7 +182,6 @@ author = {D. Cumin and C.P. Unsworth},
 @article{Moreno_2004,
 	doi = {10.1209/epl/i2004-10238-x},
 	year = {2004},
-	month = {nov},
 	publisher = {{IOP} Publishing},
 	volume = {68},
 	number = {4},
@@ -198,13 +193,12 @@ author = {D. Cumin and C.P. Unsworth},
 @article{PhysRevLett.106.128701,
   title = {Explosive Synchronization Transitions in Scale-Free Networks},
   author = {G\'omez-Garde\~nes, Jes\'us and G\'omez, Sergio and Arenas, Alex and Moreno, Yamir},
-  journal = {Phys. Rev. Lett.},
+  journal = {Physical Review Letters},
   volume = {106},
   issue = {12},
   pages = {128701},
   numpages = {4},
   year = {2011},
-  month = {Mar},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.106.128701},
 },
@@ -213,8 +207,7 @@ author = {D. Cumin and C.P. Unsworth},
    doi = {10.1209/0295-5075/101/38002},
    issn = {0295-5075},
    issue = {3},
-   journal = {EPL (Europhysics Letters)},
-   month = {2},
+   journal = {Europhysics Letters (EPL)},
    pages = {38002},
    title = {Effects of frequency-degree correlation on synchronization transition in scale-free networks},
    volume = {101},
@@ -223,13 +216,12 @@ author = {D. Cumin and C.P. Unsworth},
 @article{PhysRevLett.124.218301,
   title = {Explosive Higher-Order Kuramoto Dynamics on Simplicial Complexes},
   author = {Mill\'an, Ana P. and Torres, Joaqu\'{\i}n J. and Bianconi, Ginestra},
-  journal = {Phys. Rev. Lett.},
+  journal = {Physical Review Letters},
   volume = {124},
   issue = {21},
   pages = {218301},
   numpages = {6},
   year = {2020},
-  month = {May},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.124.218301},
 }
