comma, period and style of new line

--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
   同期現象はホタルの明滅や神経細胞・心筋細胞の電気活動など自然界で広く見られ，また，電力網などの工学系でも見られる．
   また，同期現象の数理モデルが進歩する一方でネットワーク科学が発展し，接続次数などのネットワークの構造と同期，拡散などの動的なプロセスとの関係が盛んに調べられている．  
-  閾値を越えたときのみ応答するような興奮現象を示す系からなるネットワークにおいて，percolation のような構造的な性質がネットワーク自体の機能に関係することが分かっている一方，
+  閾値を越えたときのみ応答するような興奮現象を示す素子からなるネットワークにおいて，percolation のような構造的な性質がネットワーク自体の機能に関係することが分かっている一方，
   percolation と同期現象とを同時に取り扱う研究は十分になされていない．
   同期現象を理解する場合それぞれの振動子の振動数が主要な役割を果たすため，興奮現象などの同期現象を理解する上ではネットワークの構造の一方だけを考慮することは十分とは言えない．
   そのため，ネットワークにおける振動数分布がその構造とどのように関係するか調べることが望まれる．
