critic strength generalized

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 指導教員である郡宏教授には，研究のテーマ設定から論文の執筆まで大変熱心に御指導頂きました．
-ありがとうございます．
+この場を借りて御礼申し上げます．
 
 % \begin{thebibliography}{}%%%% 参考文献 %%%
 %  \bibitem{}
