--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \WarningFilter{caption}{Unsupported document class}
 \usepackage{amsmath,amssymb,amsthm,braket,listings,physics,here,longtable,color,comment,blkarray,ascmac}
 \usepackage{mathtools}
+\usepackage[nobreak]{cite}
 \usepackage[normalem]{ulem}
 \usepackage[subrefformat=parens]{subcaption}
 \usepackage[font=small]{caption}
