--- a/main.tex
+++ b/main.tex
@@ -73,10 +73,10 @@
   percolation と同期現象とを同時に取り扱う研究は十分になされていない．
   同期現象を理解する場合それぞれの振動子の振動数が主要な役割を果たすため，興奮現象などの同期現象を理解する上ではネットワークの構造の一方だけを考慮することは十分とは言えない．
   そのため，ネットワークにおける振動数分布がその構造とどのように関係するか調べることが望まれる．
-  本論文では，振動子ネットワークにおけるネットワーク構造と同期状態やクラスタ状態の関係を調べる．
-  特に，枝の生成・消滅に伴う同期状態の変化という細かい性質及び，
-  枝の本数と振動数によるクラスタ状態の平均的な関係という一般的な性質について調べる．
-  さらには，それらの状態間の分岐条件を求め，同期や percolation との関係を調べる．
+  本論文では，振動子ネットワークにおけるネットワーク構造と同期状態やクラスタ状態の関係を調べた．
+  特に，枝の生成・消滅に伴う同期状態の変化という細かい性質を調べた．
+  そして，従来調べることができなかったネットワークの一部について，3種類の振動子で近似することで詳細なふるまいを説明する手法を提案した．
+  また，枝の本数と振動数によるクラスタ状態の平均的な関係という一般的な性質についても調べ，それらの状態間の分岐条件を求め，同期や percolation との関係を調べた．
 \end{abstract}
 
 
