--- a/main.tex
+++ b/main.tex
@@ -68,15 +68,22 @@
 
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
   同期現象はホタルの明滅や神経細胞・心筋細胞の電気活動など自然界で広く見られ，また，電力網などの工学系でも見られる．
-  また，同期現象の数理モデルが進歩する一方でネットワーク科学が発展し，接続次数などのネットワークの構造と同期，拡散などの動的なプロセスとの関係が盛んに調べられている．  
+  また，同期現象の数理モデルが進歩する一方でネットワーク科学が発展し，接続次数などのネットワークの構造と同期・拡散などの動的なプロセスとの関係が盛んに調べられている．  
   閾値を越えたときのみ応答するような興奮現象を示す素子からなるネットワークにおいて，percolation のような構造的な性質がネットワーク自体の機能に関係することが分かっている一方，
   percolation と同期現象とを同時に取り扱う研究は十分になされていない．
-  同期現象を理解する場合それぞれの振動子の振動数が主要な役割を果たすため，興奮現象などの同期現象を理解する上ではネットワークの構造の一方だけを考慮することは十分とは言えない．
-  そのため，ネットワークにおける振動数分布がその構造とどのように関係するか調べることが望まれる．
+  % 同期現象を理解する場合それぞれの振動子の振動数が主要な役割を果たすため，興奮現象などの同期現象を理解する上ではネットワークの構造の一方だけを考慮することは十分とは言えない．
+  % より深く同期現象を理解するためには，ネットワークにおける振動数分布がその構造とどのように関係するか調べることが望まれる．
+
   本論文では，振動子ネットワークにおけるネットワーク構造と同期状態やクラスタ状態の関係を調べた．
   特に，枝の生成・消滅に伴う同期状態の変化という細かい性質を調べた．
-  そして，従来調べることができなかったネットワークの一部について，3種類の振動子で近似することで詳細なふるまいを説明する手法を提案した．
+  枝の生成・消滅に伴って振動子の所属クラスタが切り替わる鞍替えという現象を発見し，鞍替え現象を説明するために3種類の振動子で近似するモデルを提案した．
+  振動子は，サイズが小さく，繋がっている枝が多いクラスタと同期しやすい．
+  
   また，枝の本数と振動数によるクラスタ状態の平均的な関係という一般的な性質についても調べ，それらの状態間の分岐条件を求め，同期や percolation との関係を調べた．
+  同期状態は，枝の数が少ない疎な領域では，percolation の閾値など構造的性質に依存し，密な領域ではネットワーク全体の振動数同期に依存する．
+  加えて，同じ振動数をもつ振動子の数の最大値という新たに導入した指標は，オーダーパラメータより顕著にミクロなクラスタ状態を表す．
+  
+  本研究の結果は，一般の振動子ネットワークの性質を深く理解する助けになることが期待される．
 \end{abstract}
 
 
@@ -100,7 +107,9 @@
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 指導教員である郡宏教授には，研究のテーマ設定から論文の執筆まで大変熱心に御指導頂きました．
 この場を借りて御礼申し上げます．
-
+また，渡邊絵美理さんを始め，数理情報第8研究室の皆様には，執筆や発表にあたって多くの示唆を与えて頂きました．
+深く感謝いたします．
+そして，オンラインを中心とした研究生活において精神的・肉体的な支えとなってくれた家族や友人など，全ての皆様に感謝申し上げます．
 % \begin{thebibliography}{}%%%% 参考文献 %%%
 %  \bibitem{}
 % \end{thebibliography}
