K2 and images are revised

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \newtheorem{example}{例}[section]
 \renewcommand{\proofname}{\bf{証明}}
 
-\title{振動子ネットワークにおける\\クラスター構造とダイナミクス}
+\title{振動子ネットワークにおける\\クラスタ構造とダイナミクス}
 %\titlewidth{}% タイトル幅 (指定するときは単位つきで)
 \author{加藤雅己}
 \eauthor{Masaki Kato}% Copyright 表示で使われる
@@ -95,18 +95,18 @@
 \clearpage}
 
 \mainmatter% ここから本文 %%% 本文 %%%%%%%%
-\subfile{chapters/notation.tex}
-\subfile{chapters/intro.tex}
-\subfile{chapters/prev.tex}
+% \subfile{chapters/notation.tex}
+% \subfile{chapters/intro.tex}
+% \subfile{chapters/prev.tex}
 \subfile{chapters/method-3body.tex}
-\subfile{chapters/method-percolation.tex}
-\subfile{chapters/summary.tex}
+% \subfile{chapters/method-percolation.tex}
+% \subfile{chapters/summary.tex}
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 指導教員である郡宏教授には，研究のテーマ設定から論文の執筆まで大変熱心に御指導頂きました．
 この場を借りて御礼申し上げます．
 
-また，泉田勇輝講師や渡邊絵美理さんを始め，数理情報第8研究室の皆様には，執筆や発表にあたって多くの示唆を与えて頂きました．
+また，渡邊絵美理さんを始め，数理情報第8研究室の皆様には，執筆や発表にあたって多くの示唆を与えて頂きました．
 深く感謝いたします．
 
 そして，オンラインを中心とした研究生活において精神的・肉体的な支えとなってくれた家族や友人など，全ての皆様に感謝申し上げます．
@@ -117,5 +117,5 @@
 \bibliography{reference.bib}% BibTeX を使う場合
 
 \appendix% ここから付録 %%%%% 付録 %%%%%%%
-\subfile{chapters/appendix.tex}
+% \subfile{chapters/appendix.tex}
 \end{document}
