--- a/mywork/notes/input/RC.tex
+++ b/mywork/notes/input/RC.tex
@@ -22,8 +22,10 @@ Zheng-Meng Zhai , 1 Ling-Wei Kong , 1 and Ying-Cheng Lai 1,2,*
   \item Macky-Glass (MG) systemとKuramoto-Sivashinsky (KS) systemに対して、シミュレーションを行う。
   \item 物理側から、確率共鳴が生まれる原理を考える。
 \end{enumerate}
+\clearpage
 
 \subsubsection{状況設定}
+Appendix A 参照。
 \begin{enumerate}
   \item hyperparameters:\begin{enumerate}
     \item \rho: the specral radius of the  reservoir network.
@@ -33,7 +35,13 @@ Zheng-Meng Zhai , 1 Ling-Wei Kong , 1 and Ying-Cheng Lai 1,2,*
     \item p: the link connection probability of the random network in the hidden layer.
     \item \sigma: the noise amplitude 
   \end{enumerate}
+  \item hyperparametersの最適化\begin{itemize}
+    \item MATLAB: SURROGATEOPT を用いる。\begin{enumerate}
+      \item 
+    \end{enumerate}
+  \end{itemize}
 \end{enumerate}
+\clearpage
 
 \subsubsection{面白いと思ったところ}
 \begin{enumerate}
