--- a/mywork/notes/input/TODO.tex
+++ b/mywork/notes/input/TODO.tex
@@ -6,6 +6,6 @@
   \end{enumerate}
   \item Reservoir Computingについて学ぶ．\begin{enumerate}
     \item レクチャーノートなどを通じて、知識を準備する。
-    \item Github環境を整備する。
   \end{enumerate}
+  \item \sout{Github環境を整備する。} 9/28, Week2: branchの作り方がよくわからないが、とりあえずpushは出来た。
 \end{enumerate}
