--- a/mywork/notes/notes.tex
+++ b/mywork/notes/notes.tex
@@ -7,6 +7,12 @@
     citecolor=blue,
     linkcolor=blue,
 }
+
+\usepackage{ulem}
+
+\usepackage{tabularx}
+\usepackage{booktabs}
+
 \usepackage{url} %同上
 \usepackage{csvsimple}
 \usepackage[dvipdfmx]{graphicx}
