noteをアップデートした

--- a/mywork/notes/input/RC.tex
+++ b/mywork/notes/input/RC.tex
@@ -1,5 +1,7 @@
 \section{Papers}
 \subsection{Emergence of a resonance in machine learning}
+\label{Emergence of a resonance in machine learning}
+
 Zheng-Meng Zhai , 1 Ling-Wei Kong , 1 and Ying-Cheng Lai 1,2,*
 1School of Electrical, Computer and Energy Engineering, Arizona State University, Tempe, Arizona 85287, USA
 2Department of Physics, Arizona State University, Tempe, Arizona 85287, USA.
@@ -13,7 +15,7 @@ Zheng-Meng Zhai , 1 Ling-Wei Kong , 1 and Ying-Cheng Lai 1,2,*
 
 \begin{enumerate}
   \item 入力信号にノイズを挿れた場合のReservoir Computingを考える。\begin{enumerate}
-    \item 47によれば、training phaseとtesting phaseのノイズ振幅が同じ時RCは最も良いパフォーマンスを発揮する。
+    \item $[47]$によれば、training phaseとtesting phaseのノイズ振幅が同じ時RCは最も良いパフォーマンスを発揮する。
     \item hyperparametersが最適化されていない時でも、ノイズを挿れることで予測の精度をあげることができる。
     \item もっとも良い精度を達成するには、hyperparametersが最適化されていなければならない。\begin{enumerate}
       \item Hyperparametersに対するBaysian optimizationで最適化可能。
@@ -21,7 +23,7 @@ Zheng-Meng Zhai , 1 Ling-Wei Kong , 1 and Ying-Cheng Lai 1,2,*
     \end{enumerate}
   \end{enumerate} 
   \item Macky-Glass (MG) systemとKuramoto-Sivashinsky (KS) systemに対して、シミュレーションを行う。
-  \item 物理側から、確率共鳴が生まれる原理を考える。
+  \item 機械学習の力学系に対して物理的なモデルを用いて、機械学習における確率共鳴が生まれる原理を考える。
 \end{enumerate}
 
 \subsubsection{手法}
