--- a/mywork/notes/input/TODO.tex
+++ b/mywork/notes/input/TODO.tex
@@ -2,10 +2,15 @@
 \begin{enumerate}
   \item \href{https://github.com/reservoirpy/reservoirpy}{reservoirpy関連}
   \begin{enumerate}
-  \item \href{https://github.com/reservoirpy/reservoirpy/blob/master/tutorials/4-Understand_and_optimize_hyperparameters.ipynb}{Understand and optimize ESN hyperparameters}などのTutorialページを読む．
+  \item Week 2: \href{https://github.com/reservoirpy/reservoirpy/blob/master/tutorials/4-Understand_and_optimize_hyperparameters.ipynb}{Understand and optimize ESN hyperparameters}などのTutorialページを読む．
   \end{enumerate}
   \item Reservoir Computingについて学ぶ．\begin{enumerate}
-    \item レクチャーノートなどを通じて、知識を準備する。
+    \item Week 2: レクチャーノートなどを通じて、知識を準備する。
   \end{enumerate}
-  \item \sout{Github環境を整備する。} 9/28, Week2: branchの作り方がよくわからないが、とりあえずpushは出来た。
+  \item \sout{Week 2 Github環境を整備する。} 9/28, Week 2: branchの作り方がよくわからないが、とりあえずpushは出来た。
+  \item 論文\ref{Emergence of a resonance in machine learning}関連
+    \begin{enumerate}
+    \item 9/28, Week 2: DVの実装。
+    \item 9/28, Week 2: Bollt$[40]$を読む。
+  \end{enumerate}
 \end{enumerate}
