--- a/mywork/notes/notes.tex
+++ b/mywork/notes/notes.tex
@@ -8,6 +8,7 @@
     linkcolor=blue,
 }
 
+\usepackage{xcolor}
 \usepackage{ulem}
 
 \usepackage{tabularx}
@@ -117,7 +118,7 @@
   \maketitle
   \tableofcontents
   \begin{abstract}
-    2023年Aセメスターの卒論執筆に際して、勉強したことや考えたことのメモをここにまとめた。
+    2023年Aセメスターの卒論執筆に際して、勉強したことや考えたことをここにまとめた。
   \end{abstract}
   \clearpage
 
