外力にlorenz方程式のx項を持つVDPを修正しました

--- a/mywork/program/VDP予測/VDP_lorenzx.ipynb
+++ b/mywork/program/VDP予測/VDP_lorenzx.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "最適化をする前に、一度esnをfittingさせてみる。"
+    "# 最適化をする前に、一度esnをfittingさせてみる。"
    ]
   },
   {
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "最適化をしない状態で一期先の予測に対してRCを用いてみた結果が下である。"
+    "# 最適化をしない状態で一期先の予測に対してRCを用いてみた結果が下である。"
    ]
   },
   {
@@ -515,25 +515,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "nrmseで14.545452155873795"
+    "# nrmseで14.545452155873795"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "次に、最適化を試みる。最適化するのは、\n",
-    "\n",
-    "\"spectral_radius\": [\"loguniform\", 1e-2, 10],   # the spectral radius is log-uniformly distributed between 1e-2 and 10\n",
-    "\n",
-    "\"leak_rate\": [\"loguniform\", 1e-3, 1],  # idem with the leaking rate, from 1e-3 to 1\n",
-    "\n",
-    "\"input_scaling\": [\"uniform\", 0, 1],           # the input scaling uniformly distributed between 0 and 1\n",
-    "\n",
-    "\"regularization\": [\"loguniform\", 1e-10, 1],  # the regularization parameter is log-uniformly distributed between 1e-10 and 1.\n",
-    "\n",
-    "\"connectivity\": [\"uniform\", 0, 1], # the connectivity of the random network in the hidden layer uniformly distributed between 0 and 1.\n",
-    "        "
+    "## 次に、最適化を試みる。最適化するのは、spectral_radius, leak_rate, input_scaling, regularization, connectivity."
    ]
   },
   {
@@ -660,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "これで最適なhyperparametersが出た。再度esnのfittingを試してみる。"
+    "# これで最適なhyperparametersが出た。再度esnのfittingを試してみる。"
    ]
   },
   {
@@ -820,7 +809,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "nrmseで0.0022087063689438216"
+    "# nrmseで0.0022087063689438216\n",
+    "（さっきは14.545452155873795）"
    ]
   },
   {
@@ -847,7 +837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "比べるべきはXとY_pred1でした"
+    "# 比べるべきはXとY_pred1でした"
    ]
   },
   {
